# track-cli

./: .gitignore  .gitlab-ci.yml  AGENT_GUIDE.md  Cargo.toml  LICENSE  README.md  config.toml.example  fix_ignored_result.py  fix_test.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  release.yml  version-tag.yml
.jules/: bolt.md  sentinel.md
agent-skills/: SKILL.md
conductor/: issue-211-plan.md
crates/agent-harness/: Cargo.toml  README.md
crates/agent-harness/src/: anthropic.rs  claude_code.rs  copilot_cli.rs  gemini_runner.rs  main.rs  runner.rs  text.rs  tools.rs
crates/github-backend/: Cargo.toml
crates/github-backend/src/: client.rs  client_tests.rs  convert.rs  convert_tests.rs  error.rs  lib.rs  trait_impl.rs  wiki.rs  wiki_tests.rs
crates/github-backend/src/models/: comment.rs  issue.rs  label.rs  mod.rs  project.rs  timeline.rs
crates/gitlab-backend/: Cargo.toml
crates/gitlab-backend/src/: client.rs  client_tests.rs  convert.rs  error.rs  filters.rs  lib.rs  trait_impl.rs
crates/gitlab-backend/src/models/: comment.rs  events.rs  issue.rs  label.rs  mod.rs  project.rs  upload.rs  wiki.rs
crates/jira-backend/: Cargo.toml
crates/jira-backend/src/: client.rs  client_tests.rs  confluence.rs  confluence_impl.rs  convert.rs  error.rs  lib.rs  trait_impl.rs
crates/jira-backend/src/markdown/: adf.rs  mod.rs  storage.rs
crates/jira-backend/src/models/: changelog.rs  comment.rs  confluence.rs  field.rs  issue.rs  mod.rs  project.rs  transitions.rs  user.rs
crates/linear-backend/: Cargo.toml
crates/linear-backend/src/: client.rs  client_tests.rs  convert.rs  error.rs  lib.rs  models.rs  trait_impl.rs
crates/track/: Cargo.toml
crates/track/src/: cache.rs  cli.rs  color.rs  config.rs  local_config.rs  main.rs  output.rs
crates/track/src/commands/: apply.rs  article.rs  attachments.rs  bundle.rs  cache.rs  config.rs  context.rs  doctor.rs  eval.rs  field.rs  init.rs  inspect.rs  issue.rs  mod.rs  open.rs  project.rs  tags.rs
crates/track/tests/: apply_integration_tests.rs  cache_integration_tests.rs  cli_tests.rs  command_integration_tests.rs  doctor_integration_tests.rs  eval_integration.rs  github_integration_tests.rs  gitlab_integration_tests.rs  integration_tests.rs  jira_integration_tests.rs  linear_integration_tests.rs  verification_integration_tests.rs  youtrack_integration_tests.rs
crates/tracker-core/: Cargo.toml
crates/tracker-core/src/: error.rs  lib.rs  models.rs  pagination.rs  strings.rs  traits.rs
crates/tracker-mock/: Cargo.toml
crates/tracker-mock/src/: client.rs  evaluator.rs  lib.rs  manifest.rs  scenario.rs
crates/youtrack-backend/: Cargo.toml
crates/youtrack-backend/src/: client.rs  client_tests.rs  convert.rs  error.rs  lib.rs  trait_impl.rs
crates/youtrack-backend/src/models/: activity.rs  admin.rs  article.rs  issue.rs  mod.rs  project.rs
docs/: SKILL.md  agent-eval-results.md  agent_guide.md  code_quality_review_2026-04-24.md  i18n_audit.md  track_agent_harness_testing.md
fixtures/: README.md
fixtures/scenarios/article-workflow/: manifest.toml  scenario.toml
fixtures/scenarios/article-workflow/responses/: add_article_comment_success.json  create_article_success.json  get_article_KB-A-1.json  get_article_KB-A-2.json  get_article_comments.json  get_article_tree.json  list_articles.json  search_articles.json  update_article_success.json
fixtures/scenarios/basic-workflow/: manifest.toml  scenario.toml
fixtures/scenarios/basic-workflow/responses/: add_comment_DEMO-1.json  get_comments_DEMO-1.json  get_issue_DEMO-1.json  get_issue_links_DEMO-1.json  search_issues_DEMO.json  update_issue_DEMO-1.json
fixtures/scenarios/cache-efficiency/: manifest.toml  scenario.toml
fixtures/scenarios/cache-efficiency/responses/: create_issue_1.json  create_issue_2.json  create_issue_3.json  create_issue_fallback.json  project_custom_fields.json
fixtures/scenarios/cache-operations/: manifest.toml  scenario.toml
fixtures/scenarios/cache-operations/responses/: cache_path.json  cache_refresh_success.json  cache_show.json  cache_status.json  list_articles.json  list_users.json
fixtures/scenarios/config-management/: manifest.toml  scenario.toml
fixtures/scenarios/context-aggregation/: manifest.toml  scenario.toml
fixtures/scenarios/error-recovery/: manifest.toml  scenario.toml
fixtures/scenarios/github-basic-workflow/: manifest.toml  scenario.toml
fixtures/scenarios/gitlab-basic-workflow/: manifest.toml  scenario.toml
fixtures/scenarios/issue-batch-operations/: manifest.toml  scenario.toml
fixtures/scenarios/issue-comments-listing/: manifest.toml  scenario.toml
fixtures/scenarios/issue-create-advanced/: manifest.toml  scenario.toml
fixtures/scenarios/issue-delete/: manifest.toml  scenario.toml
fixtures/scenarios/issue-get-full/: manifest.toml  scenario.toml
fixtures/scenarios/issue-history/: manifest.toml  scenario.toml
fixtures/scenarios/issue-linking/: manifest.toml  scenario.toml
fixtures/scenarios/issue-search-templates/: manifest.toml  scenario.toml
fixtures/scenarios/issue-start-complete/: manifest.toml  scenario.toml
fixtures/scenarios/jira-basic-workflow/: manifest.toml  scenario.toml
fixtures/scenarios/json-output/: manifest.toml  scenario.toml
fixtures/scenarios/project-operations/: manifest.toml  scenario.toml
fixtures/scenarios/state-field-resolution/: manifest.toml  scenario.toml
fixtures/scenarios/tags-operations/: manifest.toml  scenario.toml
fixtures/scenarios/validation-dry-run/: manifest.toml  scenario.toml
homebrew/: README.md
homebrew/Formula/: track.rb
scripts/: install-local.sh  install.ps1  install.sh  run-agent-eval.sh  update-homebrew-formula.sh
tests/: bench_context_integration.rs
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
website/src/components/: AgentWorkflows.astro  Backends.astro  FeatureGrid.astro  Hero.astro  KnowledgeDocs.astro  Terminal.astro
website/src/layouts/: Landing.astro
website/src/pages/: index.astro
website/src/styles/: landing.css  starlight-custom.css  theme.css
(+119 files in other folders)
