[workspace]
members = ["crates/tracker-core", "crates/youtrack-backend", "crates/track"]
resolver = "2"

[workspace.dependencies]
# Internal crates
tracker-core = { path = "crates/tracker-core" }
youtrack-backend = { path = "crates/youtrack-backend" }

# HTTP & serialization
ureq = { version = "3.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
directories = "5.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
assert_cmd = "2.0"
predicates = "3.1"
