[workspace]
members = ["crates/tracker-core", "crates/youtrack-backend", "crates/jira-backend", "crates/github-backend", "crates/gitlab-backend", "crates/track", "crates/tracker-mock", "crates/agent-harness"]
resolver = "2"

[workspace.dependencies]
# Internal crates
tracker-core = { path = "crates/tracker-core" }
youtrack-backend = { path = "crates/youtrack-backend" }
jira-backend = { path = "crates/jira-backend" }
github-backend = { path = "crates/github-backend" }
gitlab-backend = { path = "crates/gitlab-backend" }
tracker-mock = { path = "crates/tracker-mock" }

# HTTP & serialization
ureq = { version = "3.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
colored = "3.1.1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
directories = "6.0.0"
toml = "0.8"
open = "5.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Testing
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
assert_cmd = "2.0"
predicates = "3.1"
