[package]
name = "linear-backend"
version = "0.1.0"
edition = "2024"
description = "Linear backend implementation for tracker-core"

[dependencies]
tracker-core = { workspace = true }
ureq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
