[package]
name = "track"
version = "1.1.0"
edition = "2021"
description = "CLI for issue tracking systems (YouTrack, Jira, etc.)"

[[bin]]
name = "track"
path = "src/main.rs"

[dependencies]
tracker-core = { workspace = true }
youtrack-backend = { workspace = true }
jira-backend = { workspace = true }
github-backend = { workspace = true }
gitlab-backend = { workspace = true }
tracker-mock = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
directories = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
open = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
serial_test = "3.1"
