[package]
name = "tracker-mock"
version = "0.1.0"
edition = "2021"
description = "Mock client for tracker-cli evaluation and testing"

[dependencies]
tracker-core = { path = "../tracker-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
glob = "0.3"

[dev-dependencies]
tempfile = "3.10"
