[package]
name = "tracker-mock"
version = "0.1.0"
edition = "2024"
description = "Mock client for tracker-cli evaluation and testing"

[dependencies]
tracker-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
